# ueberlog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/ueberlog/: asserter.hpp  logger.hpp  uebercommon.hpp  ueberlog.hpp
src/: CMakeLists.txt
tools/: .gitignore  CMakeLists.txt
tools/logger_viewer/: CMakeLists.txt  logger_viewer_main.cpp
